<resources>
    <string name="app_name">fileceshi</string>
    <string name="people_read1">百度移动统计的对某一事件监听OnEvent方法</string>
    <string name="people_read2">百度移动统计对页面等长时间操作的监听,已经直接写在活动里</string>
    <string name="people_read3">百度统计和友盟统计包冲突不能写在同一个app里</string>
    <string name="title_activity_login">Sign in</string>

    <string name="shareActivity_read">环信libs包与新浪分享冲突，故先注解掉新浪分享功能</string>

    <!-- 友盟提供平台名称 -->
    <string name="umeng_socialize_text_tencent_key">腾讯微博</string>
    <string name="umeng_socialize_text_wenxin_fav">微信收藏</string>
    <string name="umeng_socialize_text_sina_key">微博</string>
    <string name="umeng_socialize_text_qq_key">QQ</string>
    <string name="umeng_socialize_text_qq_zone_key">QQ空间</string>
    <string name="umeng_socialize_text_renren_key">人人网</string>
    <string name="umeng_socialize_text_douban_key">豆瓣</string>
    <string name="umeng_socialize_text_weixin_key">微信</string>
    <string name="umeng_socialize_text_weixin_circle_key">微信朋友圈</string>
    <string name="umeng_socialize_text_weixin_fav_key">微信收藏</string>
    <string name="umeng_socialize_text_add_custom_platform">请配置用户平台</string>
    <string name="umeng_example_home_btn_plus">社交分享</string>
    <string name="umeng_socialize_text_waitting_share">分享中&#8230;</string>
    <string name="umeng_socialize_content_hint">说点啥&#8230;</string>
    <string name="umeng_socialize_cancel_btn_str">取消</string>
    <string name="umeng_socialize_send_btn_str">发送</string>

    <string name="umeng_socialize_female">女</string>
    <string name="umeng_socialize_male">男</string>

    <string name="umeng_socialize_share">分享</string>

    <string name="umeng_socialize_mail">邮件</string>
    <string name="umeng_socialize_sms">短信</string>
    <string name="umeng_socialize_sina">新浪</string>
    <string name="umeng_socialize_text_yixin_key">易信</string>
    <string name="umeng_socialize_text_yixincircle_key">易信朋友圈</string>

    <string name="umeng_socialize_text_laiwangdynamic_key">点点虫动态</string>
    <string name="umeng_socialize_text_evernote_key">印象笔记</string>
    <string name="umeng_socialize_text_ydnote_key">有道云笔记</string>
    <string name="umeng_socialize_text_facebook_key">Facebook</string>
    <string name="umeng_socialize_text_facebookmessager_key">Facebook Messager</string>
    <string name="umeng_socialize_text_twitter_key">Twitter</string>
    <string name="umeng_socialize_text_instagram_key">Instagram</string>
    <string name="umeng_socialize_text_pinterest_key">Pinterest</string>
    <string name="umeng_socialize_text_pocket_key">Pocket</string>
    <string name="umeng_socialize_text_linkedin_key">Linkedin</string>
    <string name="umeng_socialize_text_foursquare_key">Foursquare</string>
    <string name="umeng_socialize_text_whatsapp_key">WhatsApp</string>
    <string name="umeng_socialize_text_line_key">LINE</string>
    <string name="umeng_socialize_text_flickr_key">Flickr</string>
    <string name="umeng_socialize_text_tumblr_key">Tumblr</string>
    <string name="umeng_socialize_text_alipay_key">支付宝</string>
    <string name="umeng_socialize_text_kakao_key">KakaoTalk</string>
    <string name="umeng_socialize_text_googleplus_key">GooglePlus</string>
    <string name="umeng_socialize_text_more_key">更多</string>
    <string name="umeng_socialize_text_dingding_key">钉钉</string>
    <string name="umeng_socialize_text_vkontakte_key">VKontakte</string>
    <string name="umeng_socialize_text_dropbox_key">DropBox</string>

    <string name="button1">利用友盟实现三方分享、授权登录</string>
    <string name="button2">百度移动统计,友盟统计页面测试</string>
    <string name="button3">微信和新浪分享界面</string>
    <string name="button4">下拉刷新自定义界面</string>
    <string name="button5">环信集成测试</string>
    <string name="button6">功能问题测试</string>
    <string name="button7">自启动管理</string>
    <string name="status_test">状态栏测试</string>
    <string name="tool_test">工具类测试</string>
    <string name="lead_test">引导蒙层测试</string>
    <string name="eventbus">EventBus</string>
    <string name="check_test">检查更新</string>
    <string name="rich_appear">富文本显示</string>
    <string name="wx_share">微信分享</string>
    <string name="onevent_test">OnEvent测试</string>
    <string name="exit">exit</string>
    <string name="share">分享界面</string>
    <string name="other_name">对方的username</string>
    <string name="send_talk">发起聊天</string>
    <string name="exit_logout">退出登录</string>
    <string name="exitText_content">不开启这个自启动权限会出一堆问题,三方系统像小米，华为这种如果不开。程序一但关闭服务就会被杀掉。极光推送啥的直接完蛋，所以网上会用多种推送一起或者直接用小米推送的啦</string>
</resources>
