<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:gravity="center"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:gravity="center"
        android:text="@string/people_read1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:textAllCaps="false"
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="OnEvent测试"/>

    <TextView
        android:gravity="center"
        android:text="@string/people_read2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/page_exit"
        android:text="exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black_deep"
        android:gravity="center"
        android:text="@string/people_read3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>